--- a/index.html
+++ b/index.html
@@ -11,6 +11,33 @@
 
 <body>
 
+    <!-- header -->
+
+    <header class="main-header">
+        <span class="brand">PhotoGraphix</span>
+        <ul class="main-nav">
+            <li class="nav-link"><a href="#!">Home</a></li>
+            <li class="nav-link"><a href="#!">Gallery</a></li>
+            <li class="nav-link"><a href="#!">About</a></li>
+            <li class="nav-link"><a href="#!">Contact</a></li>
+        </ul>
+    </header>
+    <!-- end header -->
+
+    <!-- main-section -->
+    <main>
+        <section class="title-section">
+            <h1 class="title-header">
+                <span class="text-wrapper">
+                    <span class="line line1"></span>
+                    <span class="letters letters-right">Photo</span>
+                    <span class="letters letters-right">Graphix</span>
+                    <span class="line line2"></span>
+                </span>
+            </h1>
+        </section>
+    </main>
+    <!-- end main-section -->
 
     <script src="/js/anime.min.js"></script>
     <script src="/js/app.js"></script>
