--- a/index.html
+++ b/index.html
@@ -30,11 +30,114 @@
             <h1 class="title-header">
                 <span class="text-wrapper">
                     <span class="line line1"></span>
-                    <span class="letters letters-right">Photo</span>
+                    <span class="letters letters-left">Photo</span>
                     <span class="letters letters-right">Graphix</span>
                     <span class="line line2"></span>
                 </span>
             </h1>
+        </section>
+
+        <section class="hero-section">
+            <img src="images/product-5.jpg" alt="portrait">
+            <svg height="100%" width="100%">
+                <defs>
+                    <mask id="mask" x="0" y="0" width="100%" height="100%">
+                        <rect x="0" y="0" width="100%" height="100%" />
+                        <text x="50%" y="55%" text-anchor="middle">
+                            Take It Allllllll In
+                        </text>
+                    </mask>
+                </defs>
+                <rect fill="black" x="0" y="0" width="100%" height="100%" />
+            </svg>
+            <h2 class="hero-title">Hero Title</h2>
+
+        </section>
+        <section></section>
+        <section></section>
+
+        <section class="article-section">
+            <article class="article">
+                <img src="/images/product-1.jpg" alt="">
+                <div class="article-body">
+                    <h3>Article 1</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, deserunt cumque. Aut iure
+                        odio minima ad. Maxime iure rem, ex eos praesentium necessitatibus, pariatur veritatis ipsa
+                        ipsam vel, earum aliquam.</p>
+                </div>
+            </article>
+            <article class="article">
+                <img src="/images/product-1.jpg" alt="">
+                <div class="article-body">
+                    <h3>Article 2</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, deserunt cumque. Aut iure
+                        odio minima ad. Maxime iure rem, ex eos praesentium necessitatibus, pariatur veritatis ipsa
+                        ipsam vel, earum aliquam.</p>
+                </div>
+            </article>
+            <article class="article">
+                <img src="/images/product-1.jpg" alt="">
+                <div class="article-body">
+                    <h3>Article 3</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, deserunt cumque. Aut iure
+                        odio minima ad. Maxime iure rem, ex eos praesentium necessitatibus, pariatur veritatis ipsa
+                        ipsam vel, earum aliquam.</p>
+                </div>
+            </article>
+            <article class="article">
+                <img src="/images/product-1.jpg" alt="">
+                <div class="article-body">
+                    <h3>Article 1</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, deserunt cumque. Aut iure
+                        odio minima ad. Maxime iure rem, ex eos praesentium necessitatibus, pariatur veritatis ipsa
+                        ipsam vel, earum aliquam.</p>
+                </div>
+            </article>
+            <article class="article">
+                <img src="/images/product-1.jpg" alt="">
+                <div class="article-body">
+                    <h3>Article 2</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, deserunt cumque. Aut iure
+                        odio minima ad. Maxime iure rem, ex eos praesentium necessitatibus, pariatur veritatis ipsa
+                        ipsam vel, earum aliquam.</p>
+                </div>
+            </article>
+            <article class="article">
+                <img src="/images/product-1.jpg" alt="">
+                <div class="article-body">
+                    <h3>Article 3</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, deserunt cumque. Aut iure
+                        odio minima ad. Maxime iure rem, ex eos praesentium necessitatibus, pariatur veritatis ipsa
+                        ipsam vel, earum aliquam.</p>
+                </div>
+            </article>
+            <article class="article">
+                <img src="/images/product-1.jpg" alt="">
+                <div class="article-body">
+                    <h3>Article 1</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, deserunt cumque. Aut iure
+                        odio minima ad. Maxime iure rem, ex eos praesentium necessitatibus, pariatur veritatis ipsa
+                        ipsam vel, earum aliquam.</p>
+                </div>
+            </article>
+            <article class="article">
+                <img src="/images/product-1.jpg" alt="">
+                <div class="article-body">
+                    <h3>Article 2</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, deserunt cumque. Aut iure
+                        odio minima ad. Maxime iure rem, ex eos praesentium necessitatibus, pariatur veritatis ipsa
+                        ipsam vel, earum aliquam.</p>
+                </div>
+            </article>
+            <article class="article">
+                <img src="/images/product-1.jpg" alt="">
+                <div class="article-body">
+                    <h3>Article 3</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, deserunt cumque. Aut iure
+                        odio minima ad. Maxime iure rem, ex eos praesentium necessitatibus, pariatur veritatis ipsa
+                        ipsam vel, earum aliquam.</p>
+                </div>
+            </article>
         </section>
     </main>
     <!-- end main-section -->
